Add solution, add blanket
